# instruct

./: .black.toml  .gitignore  .pre-commit-config.yaml  CHANGES.rst  CHANGES.rst.template  CURRENT_VERSION.txt  LICENSE  MANIFEST.in  README.rst  benchmark.py  dev-requirements.txt  generate_version.py  pyproject.toml  setup-requirements.txt  setup.cfg  setup.py  tasks.py  tasksupport.py  test-requirements.txt
.github/workflows/: build.yml  development.yml  python-app.yml  release.yml  style-check.yml  tests.yml
instruct/: __init__.py  __main__.py  compat.py  constants.py  exceptions.py  lang.py  subtype.py  typedef.py  types.py  typing.py  utils.py
instruct/templates/: data_class.jinja  fast_clear.jinja  fast_dumps.jinja  fast_eq.jinja  fast_getitem.jinja  fast_iter.jinja  fast_new.jinja  getter.jinja  history-setter-wrapper.jinja  macros.jinja  raw_get_set_state.jinja  setter.jinja
support/mypy/: plugin.py
support/pytype/: overlay.py
tests/: conftest.py  test_atomic.py  test_atomic_310.py  test_subtype.py  test_subtype_310.py  test_typedef.py  test_typedef_312.py  test_typing310.py  test_utils.py
