[build-system]
requires = ["setuptools>=65.4.1"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | python
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length=80
multi_line_output=3
