# [mypy]
# plugins = support/mypy/plugin.py

# [pytype]
# inputs=
#     instruct/
# exclude =
#     instruct/typing.py
#     **/*_test.py
#     **/test_*.py

# python_version = 3.7
# custom_overlays =
#     instruct:support/pytype/overlay.py
# # Experimental: solve unknown types to label with structural types.
# protocols = True

[metadata]
name = instruct
version = attr: generate_version.write_about_and_emit_version
author = Autumn Jolitz
description = Compact/flexible/fast/strictly-typed/(add other ridiculous demands) object system - similar to Pydantic but focused on `__slot__`ed objects
url = https://github.com/autumnjolitz/instruct
license = BSD
license_files =
    LICENSE
platforms =
    posix
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    instruct
    typing
    mixin
    multiple-inheritance
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved :: BSD License

[options]
packages = find_namespace:
install_requires = file: setup-requirements.txt
zip_safe = False
include_package_data = True

[options.packages.find]
include =
    instruct
    instruct.*
exclude =
    contrib
    docs
    tests*

[options.extras_require]
test = file: test-requirements.txt
devel = file: dev-requirements.txt

[flake8]
ignore = E402,E731,W503,W504,E252
exclude = .git,__pycache__,build,dist,.eggs,.github,.local,python

[bdist_wheel]
universal = 0

[tool:pytest]
testpaths =
    tests
    instruct
log_cli_level = INFO
log_auto_indent = true
# filter_loggers=
addopts =
    --tb=short
    --showlocals
    --doctest-modules
    --doctest-continue-on-failure
    # --durations=3
    --color auto
    --code-highlight=yes
    # --dist loadscope
mock_traceback_monkeypatch = true
filterwarnings =
    ignore::ResourceWarning
    ignore::DeprecationWarning
